# PullApp

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  refactor_plan.md
.github/workflows/: accounts-ci.yaml  driver-tracker-ci.yaml  gateway-ci.yaml  notifications-ci.yaml  route-calc-ci.yaml  trip-planner-ci.yaml
.github/workflows/trip-planner/: CI.yaml
docs/: README.md  gitflow.md  sprint-4.md  trip-planner-spec.md
docs/01-containers/: containers.md  diagram.md
docs/01-context/: system-context.md
docs/02-bounded-contexts/driver-tracker/: driver-tracker.md
docs/02-bounded-contexts/notification-service/: notifications-service.md
docs/02-containers/: containers.md  deployment.md  diagram.md
docs/03-components/: accounts.md  chat.md  frontend.md  gateway.md  payments.md  route-calc.md  tile-server.md  trip-planner.md
docs/03-flows/: 01-driver-registers-route.md  02-1.md  02-2.md  02-3.md  02-passenger-requests-match.md  trip-planner.md
docs/04-components/: driver-tracker.md  notifications.md  route-calc.md  trip-planner.md
docs/04-flows/: auth-and-profile.md  notifications-sse.md  ride-lifecycle.md
docs/05-deployment/: observability.md
docs/05-observability/: dashboards.md  metrics.md  observability.md
docs/06-observability/: grafana-dashboards.md  metrics.md  monitoring.md
docs/07-cluster-e2e/: cluster-e2e.md
docs/08-trip-planner-done-right/: trip-planner-redo.md
docs/arch/: overview.md
docs/arch/l2/: containers.md  diagram.md
docs/reference/: trip-planner-spec.md
src/frontend/pullapp-frontend/: DECISIONS.md  README.md  package.json  pnpm-lock.yaml
src/frontend/pullapp-frontend/apps/native/: package.json
src/frontend/pullapp-frontend/apps/web/: Dockerfile  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
src/infrastructure/: .env  .env.example  docker-compose.yaml
src/infrastructure/cache/: redis.conf
src/infrastructure/compose/: Makefile  docker-compose.cache.yml  docker-compose.databases.yml  docker-compose.frontend.yml  docker-compose.messaging.yml  docker-compose.services.yml  docker-compose.yml  env.example
src/infrastructure/compute-queue/: definitions.json
src/infrastructure/k8s/base/: kustomization.yaml  namespace.yaml
src/infrastructure/k8s/base/state/: accounts-db-service.yaml  cache-service.yaml  compute-queue-service.yaml  driver-tracker-cache-service.yaml  event-bus-service.yaml  notifications-cache-service.yaml  notifications-db-service.yaml  trip-planner-db-service.yaml
src/infrastructure/k8s/observability/: install.sh  loki.yaml  otel-collector.yaml  prometheus-stack.yaml  promtail.yaml  tempo.yaml
src/infrastructure/k8s/overlay/local/: kustomization.yaml  state.yaml
src/infrastructure/loadtest/: README.md  stress-routecalc.sh  watch-keda.sh
src/infrastructure/ride-db/: flyway.conf
src/infrastructure/ride-db/init/: 00_create_extensions.sql
src/infrastructure/scripts/: local-cd.sh  local-ci.sh  run-local.sh
src/schemas/pullapp/core/v1/: queue.proto
src/services/Accounts/: Accounts.slnx  PullApp.Accounts.slnx
src/services/Accounts/infra/docker/: Dockerfile
src/services/Accounts/src/Accounts.Api/: Accounts.Api.csproj  Accounts.Api.http
src/services/Accounts/src/Accounts.Application/: Accounts.Application.csproj
src/services/Accounts/src/Accounts.Infrastructure/: Accounts.Infrastructure.csproj
src/services/Gateway/: Dockerfile  appsettings.json
src/services/Gateway/Properties/: launchSettings.json
src/services/accounts/: Dockerfile
src/services/driver-tracker/: Dockerfile  go.mod  go.sum
src/services/driver-tracker/cmd/: main.go
src/services/gateway/: Gateway.csproj  GatewayMetrics.cs  Program.cs  appsettings.json
src/services/gateway/Properties/: launchSettings.json
src/services/notifications/: Dockerfile  TESTING.md  go.mod  go.sum
src/services/notifications/cmd/: main.go
src/services/route-calc/: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.test  Makefile  README.md  pyproject.toml
src/services/route-calc/cpp/: CMakeLists.txt
src/services/route-calc/cpp/include/: mock_alg.hpp  osrm_client.hpp
src/services/route-calc/cpp/src/: mock_alg.cpp  osrm_client.cpp
src/services/route-calc/cpp/tests/: geometry_parse_test.cpp  osrm_test.cpp
src/services/route-calc/route_calc/: main.py
src/services/route-calc/route_calc/algorithms/: __init__.py  algorithms_orchestrator.py  bindings.cpp  mock_alg.cpp  setup.py
src/services/route-calc/route_calc/api/: consumer.py
src/services/route-calc/route_calc/infra/: config.py  db.py  health.py  queue.py  telemetry.py
src/services/route-calc/route_calc/model/: algorithms.py  common.py  job_context.py  messages.py  results.py
src/services/route-calc/src/route_calc/: config.json  main.py
src/services/route-calc/src/route_calc/algorithms/: algorithms_orchestrator.py  mock_algorithm.py
src/services/route-calc/src/route_calc/api/: consumer.py
src/services/route-calc/src/route_calc/infra/: logger.py  queue.py
src/services/route-calc/src/route_calc/infra/queue/: model.py  queue.py
src/services/route-calc/src/route_calc/model/: algorithms.py  common.py  messages.py  results.py
src/services/route-calc/tests/: README.md  algorithm_test.py  autoscaling_test.py  conftest.py  consumer_flow.py  consumer_test.py  db_test.py  geometry_parse_test.py  integration_test.py  osrm_integration_test.py  purge_queues.py  rabbitmq_e2e_test.py  rabbitmq_integration_test.py
src/services/trip-planner/: Dockerfile  TripPlanner.sln
src/tests/: Makefile
src/tests/e2e/: conftest.py  helpers.py  pytest.ini  requirements.txt
src/tests/e2e/flows/: test_driver_cancel_route_flow.py  test_driver_decline_flow.py  test_full_ride_flow.py
src/tests/postman/: pullapp.postman_collection.json
src/trip-planner/: TripPlanner.sln
src/trip-planner/infra/docker/: Dockerfile
src/trip-planner/src/TripPlanner.Api/: TripPlanner.Api.http
src/trip-planner/tests/TripPlanner.UnitTests/: HelloWorldTest.cs
src/web/: README.md  index.html  package-lock.json  package.json
src/web/src/: App.css  App.tsx
(+428 files in other folders)
