[project]
name = "route-calc"
version = "0.1.0"
description = ""
authors = [
    {name = "Patryk Pol"}
]
requires-python = ">=3.13"


[tool.poetry.dependencies]
python = ">=3.13,<=3.14"

# validation
pydantic = ">=2.12.5,<2.13"

# --- database (Postgres + PostGIS) ---
psycopg = ">=3.3.3,<3.4"
sqlalchemy = ">=2.0.48,<2.1"
geoalchemy2 = ">=0.18.4,<0.19"

# --- messaging (RabbitMQ) ---
aio-pika = ">=9.6.2,<9.7"

# --- algorithms in c++ ---
pybind11 = ">=3.0.2,<3.1"
setuptools = ">=82.0,<82.1"

# --- schema generation ---
protobuf = "^7.34.1"


[tool.poetry.group.dev.dependencies]
pytest = ">=8.0,<9.0"
pytest-asyncio = ">=0.23,<0.24"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]


[tool.poetry]
packages = [{ include = "route_calc", from = "." }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
