[project]
name = "route-calc"
version = "0.1.0"
description = ""
authors = [
    {name = "Patryk Pol"}
]
requires-python = ">=3.13,<3.15"


[tool.poetry.dependencies]
python = ">=3.13,<3.15"

# validation
pydantic = ">=2.12.5,<2.13"

# --- database (Postgres + PostGIS) ---
psycopg = ">=3.3.3,<3.4"
sqlalchemy = ">=2.0.48,<2.1"
geoalchemy2 = ">=0.18.4,<0.19"

# --- messaging (RabbitMQ) ---
aio-pika = ">=9.6.2,<9.7"

# --- algorithms in c++ ---
pybind11 = ">=3.0.2,<3.1"

# --- schema generation ---
protobuf = ">=5.0,<7.0"

# --- observability ---
opentelemetry-sdk = ">=1.41.0,<2.0"
opentelemetry-exporter-otlp-proto-grpc = ">=1.41.0,<2.0"


[tool.poetry.group.dev.dependencies]
pytest = ">=8.0,<9.0"
pytest-asyncio = ">=0.23,<0.24"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]


[tool.poetry]
name = "route-calc"
version = "0.1.0"
packages = [{ include = "route_calc" }]


[build-system]
requires = ["scikit-build-core>=0.12,<0.13", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["route_calc"]